--- a/IS453 Group Assignment Analysis.ipynb
+++ b/IS453 Group Assignment Analysis.ipynb
@@ -1205,7 +1205,9 @@
    "id": "7895fb4e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"--- IGNORE ---\")"
+   ]
   }
  ],
  "metadata": {
