--- a/IS453 Group Assignment Analysis.ipynb
+++ b/IS453 Group Assignment Analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1e8346f9",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e7a60223",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6a208131",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6e9a92c4",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "da8c663c",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "5ec02583",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "6deb79e7",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "id": "04f97843",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdat\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dat' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "33ac3531",
    "metadata": {},
    "outputs": [
@@ -262,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "71c59998",
    "metadata": {},
    "outputs": [
@@ -459,238 +481,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d4c9ee6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SK_ID_CURR</th>\n",
-       "      <th>TARGET</th>\n",
-       "      <th>NAME_CONTRACT_TYPE</th>\n",
-       "      <th>CODE_GENDER</th>\n",
-       "      <th>FLAG_OWN_CAR</th>\n",
-       "      <th>FLAG_OWN_REALTY</th>\n",
-       "      <th>CNT_CHILDREN</th>\n",
-       "      <th>AMT_INCOME_TOTAL</th>\n",
-       "      <th>AMT_CREDIT</th>\n",
-       "      <th>AMT_ANNUITY</th>\n",
-       "      <th>...</th>\n",
-       "      <th>FLAG_DOCUMENT_18</th>\n",
-       "      <th>FLAG_DOCUMENT_19</th>\n",
-       "      <th>FLAG_DOCUMENT_20</th>\n",
-       "      <th>FLAG_DOCUMENT_21</th>\n",
-       "      <th>AMT_REQ_CREDIT_BUREAU_HOUR</th>\n",
-       "      <th>AMT_REQ_CREDIT_BUREAU_DAY</th>\n",
-       "      <th>AMT_REQ_CREDIT_BUREAU_WEEK</th>\n",
-       "      <th>AMT_REQ_CREDIT_BUREAU_MON</th>\n",
-       "      <th>AMT_REQ_CREDIT_BUREAU_QRT</th>\n",
-       "      <th>AMT_REQ_CREDIT_BUREAU_YEAR</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100002</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cash loans</td>\n",
-       "      <td>M</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>202500.0</td>\n",
-       "      <td>406597.5</td>\n",
-       "      <td>24700.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100003</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cash loans</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "      <td>270000.0</td>\n",
-       "      <td>1293502.5</td>\n",
-       "      <td>35698.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>100004</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Revolving loans</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>67500.0</td>\n",
-       "      <td>135000.0</td>\n",
-       "      <td>6750.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>100006</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cash loans</td>\n",
-       "      <td>F</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>135000.0</td>\n",
-       "      <td>312682.5</td>\n",
-       "      <td>29686.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>100007</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cash loans</td>\n",
-       "      <td>M</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>121500.0</td>\n",
-       "      <td>513000.0</td>\n",
-       "      <td>21865.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 120 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   SK_ID_CURR  TARGET NAME_CONTRACT_TYPE CODE_GENDER FLAG_OWN_CAR  \\\n",
-       "0      100002       1         Cash loans           M            N   \n",
-       "1      100003       0         Cash loans           F            N   \n",
-       "2      100004       0    Revolving loans           M            Y   \n",
-       "3      100006       0         Cash loans           F            N   \n",
-       "4      100007       0         Cash loans           M            N   \n",
-       "\n",
-       "  FLAG_OWN_REALTY  CNT_CHILDREN  AMT_INCOME_TOTAL  AMT_CREDIT  AMT_ANNUITY  \\\n",
-       "0               Y             0          202500.0    406597.5      24700.5   \n",
-       "1               N             0          270000.0   1293502.5      35698.5   \n",
-       "2               Y             0           67500.0    135000.0       6750.0   \n",
-       "3               Y             0          135000.0    312682.5      29686.5   \n",
-       "4               Y             0          121500.0    513000.0      21865.5   \n",
-       "\n",
-       "   ...  FLAG_DOCUMENT_18 FLAG_DOCUMENT_19 FLAG_DOCUMENT_20 FLAG_DOCUMENT_21  \\\n",
-       "0  ...                 0                0                0                0   \n",
-       "1  ...                 0                0                0                0   \n",
-       "2  ...                 0                0                0                0   \n",
-       "3  ...                 0                0                0                0   \n",
-       "4  ...                 0                0                0                0   \n",
-       "\n",
-       "  AMT_REQ_CREDIT_BUREAU_HOUR AMT_REQ_CREDIT_BUREAU_DAY  \\\n",
-       "0                        0.0                       0.0   \n",
-       "1                        0.0                       0.0   \n",
-       "2                        0.0                       0.0   \n",
-       "3                        NaN                       NaN   \n",
-       "4                        0.0                       0.0   \n",
-       "\n",
-       "   AMT_REQ_CREDIT_BUREAU_WEEK  AMT_REQ_CREDIT_BUREAU_MON  \\\n",
-       "0                         0.0                        0.0   \n",
-       "1                         0.0                        0.0   \n",
-       "2                         0.0                        0.0   \n",
-       "3                         NaN                        NaN   \n",
-       "4                         0.0                        0.0   \n",
-       "\n",
-       "   AMT_REQ_CREDIT_BUREAU_QRT  AMT_REQ_CREDIT_BUREAU_YEAR  \n",
-       "0                        0.0                         1.0  \n",
-       "1                        0.0                         0.0  \n",
-       "2                        0.0                         0.0  \n",
-       "3                        NaN                         NaN  \n",
-       "4                        0.0                         0.0  \n",
-       "\n",
-       "[5 rows x 120 columns]"
+       "117000000.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "app_df.head()"
+    "# app_df.head()\n",
+    "app_df['AMT_INCOME_TOTAL'].max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "71cd4ec3",
    "metadata": {},
    "outputs": [
@@ -720,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4dcbf393",
    "metadata": {},
    "outputs": [
@@ -751,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "809b6685",
    "metadata": {},
    "outputs": [
@@ -982,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9c51be06",
    "metadata": {},
    "outputs": [
@@ -1005,23 +818,23 @@
       "================================================================================\n",
       "\n",
       "FILTERED DATASET (Target Segment):\n",
-      "  Total records: 9,434\n",
-      "  Goods (TARGET=0): 8,506\n",
-      "  Bads (TARGET=1): 928\n",
-      "  Bad rate: 9.84%\n",
+      "  Total records: 31,125\n",
+      "  Goods (TARGET=0): 28,016\n",
+      "  Bads (TARGET=1): 3,109\n",
+      "  Bad rate: 9.99%\n",
       "\n",
       "================================================================================\n",
       "COMPARISON METRICS\n",
       "================================================================================\n",
       "\n",
       "RETENTION:\n",
-      "  Records retained: 9,434 out of 307,511\n",
-      "  Retention rate: 3.07%\n",
+      "  Records retained: 31,125 out of 307,511\n",
+      "  Retention rate: 10.12%\n",
       "\n",
       "BAD RATE COMPARISON:\n",
       "  Original bad rate: 8.07%\n",
-      "  Filtered bad rate: 9.84%\n",
-      "  Difference: +1.76 percentage points\n",
+      "  Filtered bad rate: 9.99%\n",
+      "  Difference: +1.92 percentage points\n",
       "  → Target segment is HIGHER RISK (worse than average)\n",
       "\n",
       "================================================================================\n",
@@ -1034,16 +847,8 @@
       "  Records: 226,662 (73.71%)\n",
       "  Bad rate: 8.71%\n",
       "\n",
-      "2. Employment (1+ years)\n",
-      "  Records: 224,233 (72.92%)\n",
-      "  Bad rate: 8.37%\n",
-      "\n",
-      "3. Income (36K-72K)\n",
-      "  Records: 23,229 (7.55%)\n",
-      "  Bad rate: 7.86%\n",
-      "\n",
       "4. Income Type (Working/Commercial/State)\n",
-      "  Records: 252,094 (81.98%)\n",
+      "  Records: 252,116 (81.99%)\n",
       "  Bad rate: 8.66%\n",
       "\n",
       "5. Contract Type (Cash loans)\n",
@@ -1054,18 +859,18 @@
       "\n",
       "1. ORIGINAL DATASET SIZE: 307,511 applicants\n",
       "\n",
-      "2. FILTERED DATASET SIZE: 9,434 applicants\n",
-      "   - Retention rate: 3.07%\n",
+      "2. FILTERED DATASET SIZE: 31,125 applicants\n",
+      "   - Retention rate: 10.12%\n",
       "\n",
       "3. BAD RATE COMPARISON:\n",
       "   - Original dataset: 8.07%\n",
-      "   - Target segment: 9.84%\n",
-      "   - Difference: +1.76 percentage points\n",
+      "   - Target segment: 9.99%\n",
+      "   - Difference: +1.92 percentage points\n",
       "\n",
       "4. INTERPRETATION:\n",
       "   The target segment for lifelong learning loans (mid-career professionals\n",
       "   aged 25-45 with stable employment and middle income) represents \n",
-      "   3.07% of the original dataset and shows a \n",
+      "   10.12% of the original dataset and shows a \n",
       "   HIGHER \n",
       "   default risk compared to the overall portfolio.\n",
       "\n"
@@ -1102,11 +907,11 @@
     "filtered_df = app_df[\n",
     "    (app_df['DAYS_BIRTH'] >= -20075) & \n",
     "    (app_df['DAYS_BIRTH'] <= -9125) &\n",
-    "    (app_df['AMT_INCOME_TOTAL'] >= 36000) & \n",
-    "    (app_df['AMT_INCOME_TOTAL'] <= 72000) &\n",
-    "    (app_df['DAYS_EMPLOYED'] <= -365) &\n",
+    "    # (app_df['AMT_INCOME_TOTAL'] >= 0) & \n",
+    "    (app_df['AMT_INCOME_TOTAL'] <= 96000) &\n",
+    "    # (app_df['DAYS_EMPLOYED'] <= -365) &\n",
     "    (app_df['NAME_CONTRACT_TYPE'] == 'Cash loans') &\n",
-    "    (app_df['NAME_INCOME_TYPE'].isin(['Working', 'Commercial associate', 'State servant']))\n",
+    "    (app_df['NAME_INCOME_TYPE'].isin(['Working', 'Commercial associate', 'State servant','Unemployed','Maternity Leave']))\n",
     "]\n",
     "\n",
     "# Calculate filtered dataset metrics\n",
@@ -1156,12 +961,12 @@
     "criteria = [\n",
     "    ('1. Age (25-55 years)', \n",
     "     app_df[(app_df['DAYS_BIRTH'] >= -20075) & (app_df['DAYS_BIRTH'] <= -9125)]),\n",
-    "    ('2. Employment (1+ years)', \n",
-    "     app_df[app_df['DAYS_EMPLOYED'] <= -365]),\n",
-    "    ('3. Income (36K-72K)', \n",
-    "     app_df[(app_df['AMT_INCOME_TOTAL'] >= 36000) & (app_df['AMT_INCOME_TOTAL'] <= 72000)]),\n",
+    "    # ('2. Employment (1+ years)', \n",
+    "    #  app_df[app_df['DAYS_EMPLOYED'] <= -365]),\n",
+    "    # ('3. Income (36K-72K)', \n",
+    "    #  app_df[(app_df['AMT_INCOME_TOTAL'] >= 36000) & (app_df['AMT_INCOME_TOTAL'] <= 72000)]),\n",
     "    ('4. Income Type (Working/Commercial/State)', \n",
-    "     app_df[app_df['NAME_INCOME_TYPE'].isin(['Working', 'Commercial associate', 'State servant'])]),\n",
+    "     app_df[app_df['NAME_INCOME_TYPE'].isin(['Working', 'Commercial associate', 'State servant','Unemployed', 'Maternity Leave'])]),\n",
     "    ('5. Contract Type (Cash loans)', \n",
     "     app_df[app_df['NAME_CONTRACT_TYPE'] == 'Cash loans'])\n",
     "]\n",
@@ -1204,7 +1009,15 @@
    "execution_count": null,
    "id": "7895fb4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- IGNORE ---\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"--- IGNORE ---\")"
    ]
